--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,20 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+
+
+
+### July
+
+#### Thursday July 29
+[Todesco et al, preprint](https://www.biorxiv.org/content/10.1101/2021.06.26.449999v1)
+Genetic basis and dual adaptive role of floral pigmentation in sunflowers
+
+
+#### Thursday July 22
+[Szukala et al, preprint](https://www.biorxiv.org/content/10.1101/2021.07.05.451094v2)
+Polygenic routes lead to parallel altitudinal adaptation in Heliosperma pusillum (Caryophyllaceae)
+
 ### May
 
 #### Thursday May 27
