--- a/publications.Rmd
+++ b/publications.Rmd
@@ -4,10 +4,15 @@
 &nbsp;
 &nbsp;
 
-
-
+## preprint
+* [Domestication Reshaped the Genetic Basis of Inbreeding Depression in a Maize Landrace Compared to its Wild Relative, Teosinte](https://doi.org/10.1101/2021.09.01.458502)
+LF Samayoa, BA Olukolu, CJ Yang, Q Chen, **Markus G Stetter**, Alessandra M York, Jose de Jesus Sanchez-Gonzalez, Jeffrey C Glaubitz, Peter J Bradbury, Maria Cinta Romay, Qi Sun, Jinliang Yang, Jeffrey Ross-Ibarra, Edward S Buckler, JF Doebley and James B Holland 
 
 ## 2021
+
+* [Breeding Amaranth for Biomass: Evaluating Dry Matter Content and Biomass Potential in Early and Late Maturing Genotypes](https://doi.org/10.3390/agronomy11050970)
+Ali Baturaygil, **Markus G Stetter** and Karl Schmid *Agronomy*
+
 * [PopAmaranth: A population genetic genome browser for grain amaranths and their wild relatives](https://doi.org/10.1093/g3journal/jkab103)       
 **José Gonçalves-Dias** and **Markus G Stetter** *G3*  
 Link to PopAmaranth: [amaranthGDB.org](https://amaranthgdb.org)       
@@ -15,7 +20,8 @@ Link to PopAmaranth: [amaranthGDB.org](https://amaranthgdb.org)
 
 
 * [Comparative evolutionary analysis and prediction of deleterious mutation patterns between sorghum and maize](https://www.nature.com/articles/s41477-020-00834-5.epdf?sharing_token=_mN9oSJzgPbS9Ldsr01s8dRgN0jAjWel9jnR3ZoTv0OIqw-nLs7dqtihevHgjRdBgKyJmnWQSkGOUEc4hulR2jnTLjP4fqtKbSUSzA7iWbyA0E0YEvXdfVUO_1_dmi2uNdJtrPRcKz9O_jp58VwFcP02Yhzr7I3YNxgg8Oit1Xk%3D)   
-Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, **Markus G Stetter**, Ravi Valluru, Nonoy Bandillo, Samuel B. Fernandes, Patrick J. Brown, Nadia Shakoor, Todd C. Mockler, Edward S. Buckler, Jeffrey Ross-Ibarra and Michael A. Gore  *Nature Plants*          [Preprint](https://doi.org/10.1101/777623)
+Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, **Markus G Stetter**, Ravi Valluru, Nonoy Bandillo, Samuel B. Fernandes, Patrick J. Brown, Nadia Shakoor, Todd C. Mockler, Edward S. Buckler, Jeffrey Ross-Ibarra and Michael A. Gore  *Nature Plants*          
+[Preprint](https://doi.org/10.1101/777623)
 
 ## 2020
 
