--- a/reading.Rmd
+++ b/reading.Rmd
@@ -16,7 +16,7 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 ### November
 
 #### Thursday November 18
-[Naish, et al, 2021](https://www.science.org/doi/10.1126/science.abi7489
+[Naish, et al, 2021](https://www.science.org/doi/10.1126/science.abi7489)
 The genetic and epigenetic landscape of the Arabidopsis centromeres
 
 #### Thursday November 4
