Julio image added

--- a/people.Rmd
+++ b/people.Rmd
@@ -164,13 +164,13 @@ Tom is a master student studying the the amaranth transcriptome and the involvem
 
 
 <div style="float: left">
-<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+<img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
 **Julio Martinez** 
 <div style="float: left">
 </div>
-Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth.
+Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network.
 <!-- break -->
 <br>
 <br>
