--- a/publications.Rmd
+++ b/publications.Rmd
@@ -4,11 +4,13 @@
 &nbsp;
 &nbsp;
 
-## preprint
-* [Domestication Reshaped the Genetic Basis of Inbreeding Depression in a Maize Landrace Compared to its Wild Relative, Teosinte](https://doi.org/10.1101/2021.09.01.458502)
-LF Samayoa, BA Olukolu, CJ Yang, Q Chen, **Markus G Stetter**, Alessandra M York, Jose de Jesus Sanchez-Gonzalez, Jeffrey C Glaubitz, Peter J Bradbury, Maria Cinta Romay, Qi Sun, Jinliang Yang, Jeffrey Ross-Ibarra, Edward S Buckler, JF Doebley and James B Holland 
+
 
 ## 2021
+
+* [Domestication Reshaped the Genetic Basis of Inbreeding Depression in a Maize Landrace Compared to its Wild Relative, Teosinte](https://doi.org/10.1371/journal.pgen.1009797)
+LF Samayoa, BA Olukolu, CJ Yang, Q Chen, **Markus G Stetter**, Alessandra M York, Jose de Jesus Sanchez-Gonzalez, Jeffrey C Glaubitz, Peter J Bradbury, Maria Cinta Romay, Qi Sun, Jinliang Yang, Jeffrey Ross-Ibarra, Edward S Buckler, JF Doebley and James B Holland *PLOS Genetics*  
+[Preprint](https://doi.org/10.1101/2021.09.01.458502)
 
 * [Breeding Amaranth for Biomass: Evaluating Dry Matter Content and Biomass Potential in Early and Late Maturing Genotypes](https://doi.org/10.3390/agronomy11050970)
 Ali Baturaygil, **Markus G Stetter** and Karl Schmid *Agronomy*
