--- a/reading.Rmd
+++ b/reading.Rmd
@@ -15,6 +15,15 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### February
 
+#### Thursday February 17
+[Battlay, et al 2021](https://doi.org/10.1101/2021.09.13.459985)
+Pleiotropy drives repeatability in the genetic basis of adaptation
+
+
+#### Thursday February 10
+[Novo, et al 2022](https://doi.org/10.1371/journal.pgen.1009764)
+The estimates of effective population size based on linkage disequilibrium are virtually unaffected by natural selection
+
 #### Thursday February 3
 [Monroe, et al 2022](https://www.nature.com/articles/s41586-021-04269-6)
 Mutation bias reflects natural selection in Arabidopsis thaliana
