--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,15 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### April
+
+#### Thursday April 14 
+Manuscript in progress (contact Markus for access)
+
+#### Thursday April 7
+[Solares, et al preprint](https://www.biorxiv.org/content/10.1101/2022.03.30.486474v1)
+Insights into the domestication of avocado and potential genetic contributors to heterodichogamy
+
 ### March
 
 #### Thursday March 17
