--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,14 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### April
 
+#### Thursday April 28
+[Li, et al 2022](https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.18026)
+CsMYB1 integrates the regulation of trichome development and catechins biosynthesis in tea plant domestication
+
+#### Thursday April 21
+[Liu, et al 2022](https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msac078/6564429)
+A transposon insertion drove the loss of natural seed shattering during foxtail millet domestication
+
 #### Thursday April 14 
 Manuscript in progress (contact Markus for access)
 
