--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,7 +12,11 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### July
 
+#### Thursday June 28
+[Hu, et al preprint](https://www.biorxiv.org/content/10.1101/2022.07.15.500250v1)
+Allele-specific expression reveals multiple paths to highland adaptation in maize
 
 ### June
 
