--- a/publications.Rmd
+++ b/publications.Rmd
@@ -5,6 +5,11 @@
 &nbsp;
 
 
+## 2022
+
+* [Functional analysis of the BEACH domain gene MpSPIRRIG in Marchantia polymorpha]()  
+E Koebke, L Stephan, **Markus G Stetter**,  M Huelskamp  *Frontiers in Plant Science*  
+
 
 ## 2021
 
