--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ shiny::includeHTML("custom_header.html")
 Welcome to the Stetter lab in the [Institute for Plant Sciences](http://www.botanik.uni-koeln.de/1634.html?&L=1) at the [University of Cologne](https://www.uni-koeln.de/). 
 We are interested in crop evolution and adaptation. We study the incomplete domestication of the South American pseudo-cereal, amaranth, and the domestication and cultivation history of maize. We use population and quantitative genetic methods to understand how wild plants became crops and how these crops spread across the globe. 
 
-[**WE ARE HIRING**](PhDpositions_Stetter_Krug.pdf) a PhD student in evolutionary genetics within the newly established Collaborative Research Center on Plant Ecological Genetics
+[**WE ARE HIRING**](PhDposition_Stetter.pdf) a PhD student in evolutionary genetics within the newly established Collaborative Research Center on Plant Ecological Genetics
 
 Read more about our [research](research.html) and who we are on this site. If you like what we do and would like to join the lab please contact [Markus](mailto:m.stetter@uni-koeln.de) to find out more about openings and possibilities to apply for fellowships.
 
