--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### September
 
+#### Thursday September 22
+[Todd, et al 2022](https://www.science.org/doi/10.1126/science.abo3503)
+The genomic history and global expansion of domestic donkeys
+
 #### Thursday September 15
 [Vourlaki, et al preprint](https://www.biorxiv.org/content/10.1101/2022.08.24.505198v1)
 Detection of Domestication Signals through the Analysis of the Full Distribution of Fitness Effects using Forward Simulations and Polygenic Adaptation
