--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,7 +12,18 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### October
+
+#### Thursday October 5
+[Exposito-Alonso, et al 2022](https://www.science.org/doi/10.1126/science.abn5642)
+Genetic diversity loss in the Anthropocene
+
+
 ### September
+
+#### Thursday September 29
+[Lopez-Valdivia, et al 2022](https://www.pnas.org/doi/abs/10.1073/pnas.2110245119)
+Gradual domestication of root traits in the earliest maize from Tehuacán
 
 #### Thursday September 22
 [Todd, et al 2022](https://www.science.org/doi/10.1126/science.abo3503)
