--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,14 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+
+### November
+
+#### Thursday November 17
+[Muleta, et al 2022](https://academic.oup.com/mbe/article/39/6/msac078/6564429)
+Transposon Insertion Drove the Loss of Natural Seed Shattering during Foxtail Millet Domestication
+
+
 ### October
 
 
