--- a/reading.Rmd
+++ b/reading.Rmd
@@ -16,9 +16,8 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 ### November
 
 #### Thursday November 17
-[Muleta, et al 2022](https://academic.oup.com/mbe/article/39/6/msac078/6564429)
-Transposon Insertion Drove the Loss of Natural Seed Shattering during Foxtail Millet Domestication
-
+[Pucker, et al preprint](https://www.biorxiv.org/content/10.1101/2022.10.19.512958v1.full)
+Evolutionary blocks to anthocyanin accumulation and the loss of an anthocyanin carrier protein in betalain-pigmented Caryophyllales
 
 ### October
 
