--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,9 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 
 ### November
+#### Thursday November 24
+[Díaz-Valenzuela, et al preprint](https://www.biorxiv.org/content/10.1101/2022.10.13.511672v1)
+The role of non-additive gene action on gene expression variation in plant domestication
 
 #### Thursday November 17
 [Pucker, et al preprint](https://www.biorxiv.org/content/10.1101/2022.10.19.512958v1.full)
